--- a/appMovilAndroid/app/src/main/res/values/colors.xml
+++ b/appMovilAndroid/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="text_icons">#FFFFFFFF</color>
+    <color name="dark_primary_color">#1976D2</color>
+    <color name="light_primary_color">#BBDEFB</color>
+    <color name="primary_color">#2196F3</color>
+    <color name="accent_color">#009688</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="divider_color">#BDBDBD</color>
 </resources>
